# ML_HomeWork2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: cli.py  logger.py  model_impl.py
